--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
     <div class="span3 bs-docs-sidebar">
         <h1>Stacks</h1>
         <ul class="nav nav-list bs-docs-sidenav">
-            <li style="color:black">Python</li>
+            <li style="color:black">Pythons</li>
             <li style="color:black">Php</li>
             <li style="color:black">Javascript</li>
             <li style="color:black">Go</li>
