--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,9 +1,4 @@
-<link rel="stylesheet" href="{{ "/css/bootstrap.css" | relURL }}">
-<link rel="stylesheet" href="{{ "/css/bootstrap-responsive.css" | relURL }}">
-<link rel="stylesheet" href="{{ "/css/style.css" | relURL }}">
-{{ range .Site.Params.customCSS -}}
-<link rel="stylesheet" href="{{ . | relURL }}">
-{{- end }}
+
 <script src="{{ "/js/jquery.js" | relURL }}"></script>
 <script src="{{ "/js/bootstrap-386.js" | relURL }}"></script>
 <script src="{{ "/js/bootstrap-transition.js" | relURL }}"></script>
@@ -19,7 +14,7 @@
 <script src="{{ "/js/bootstrap-carousel.js" | relURL }}"></script>
 <script src="{{ "/js/bootstrap-typeahead.js" | relURL }}"></script>
 <script src="{{ "/js/bootstrap-affix.js" | relURL }}"></script>
-<script>
+<!-- <script>
     _386 = { 
         fastLoad:{{ .Site.Params.loadfastload }},
         onePass:{{ .Site.Params.loadonepass }}, 
@@ -30,7 +25,7 @@
     function ThisYear() {
         document.getElementById('thisyear').innerHTML = new Date().getFullYear();
     };
-</script>
+</script> -->
 {{- range .Site.Params.customJS }}
 <script src="{{ . | relURL }}"></script>
 {{- end }}
