--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,12 @@
     <meta name="theme-color" content="#000084" />
     <link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico">
     <link rel="canonical" href="{{ .Site.BaseURL }}">
+    <link rel="stylesheet" href="{{ "/css/bootstrap.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "/css/bootstrap-responsive.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}">
+    {{ range .Site.Params.customCSS -}}
+    <link rel="stylesheet" href="{{ . | relURL }}">
+    {{- end }}
     {{/* Don't ask why it's like this. This original theme is a mess... */}}
     <!-- <noscript><style>body { visibility: visible }</style></noscript> -->
 </head>
