--- a/layouts/partials/copyright.html
+++ b/layouts/partials/copyright.html
@@ -6,7 +6,7 @@
 {{ with .Site.Params.copyright.url }}<a href="{{ . }}" target="_blank">{{ end }}
     {{ .Site.Params.copyright.name }}
 {{ with .Site.Params.copyright.url }}</a>{{ end }}
-<span id="thisyear">2021 ianrussel537@gmail.com</span>
+<span id="thisyear"> </span>
 {{ with .Site.Params.Copyright.Suffix }}
     | {{ . | markdownify }}
 {{end}}
