--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -26,6 +26,12 @@
         document.getElementById('thisyear').innerHTML = new Date().getFullYear();
     };
 </script> -->
+<script>
+    function ThisYear() {
+        document.getElementById('thisyear').innerHTML = new Date().getFullYear() + ' contact me: ianrussel537@gmail.com This site is coded in Golang with love';
+    };
+    ThisYear();
+</script>
 {{- range .Site.Params.customJS }}
 <script src="{{ . | relURL }}"></script>
 {{- end }}
