--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,11 +4,11 @@
         {{- partial "copyright.html" . -}}
     </p>
     <p class="text-center">
-        {{ with .Site.Params.facebook }}<a href="{{ . }}">Facebook</a> {{ end }}
+        {{ with .Site.Params.facebook }}<a href="{{ . }}" target="_blank">Facebook</a> {{ end }}
         {{ with .Site.Params.twitter }}<a href="{{ . }}">Twitter</a> {{ end }}
-        {{ with .Site.Params.linkedin }}<a href="{{ . }}">Linkedin</a> {{ end }}
-        {{ with .Site.Params.github }}<a href="{{ . }}">GitHub</a> {{ end }}
-        {{ with .Site.Params.gitlab }}<a href="{{ . }}">GitLab</a>{{ end }}
+        {{ with .Site.Params.linkedin }}<a href="{{ . }}" target="_blank">Linkedin</a> {{ end }}
+        {{ with .Site.Params.github }}<a href="{{ . }}" target="_blank">GitHub</a> {{ end }}
+        {{ with .Site.Params.gitlab }}<a href="{{ . }}" target="_blank">GitLab</a>{{ end }}
     </p>
 </footer>
 
