--- a/layouts/index.html
+++ b/layouts/index.html
@@ -53,6 +53,7 @@
         <ul class="nav nav-list bs-docs-sidenav">
             <li style="color:black">AWS </li>
             <li style="color:black">Heroku</li>
+            <li style="color:black">Digital Ocean</li>
         </ul>
         <p></p>
     </div>
