added google analytics

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,4 +15,5 @@
     {{- end }}
     {{/* Don't ask why it's like this. This original theme is a mess... */}}
     <!-- <noscript><style>body { visibility: visible }</style></noscript> -->
+    {{ template "_internal/google_analytics.html" . }}
 </head>
