--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,5 +15,13 @@
     {{- end }}
     {{/* Don't ask why it's like this. This original theme is a mess... */}}
     <!-- <noscript><style>body { visibility: visible }</style></noscript> -->
-    {{ template "_internal/google_analytics.html" . }}
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K8C29Z7Q33"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-K8C29Z7Q33');
+    </script>
 </head>
